assests/css/main.css
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.section-padding {
  padding-top: 8%;
}

.navbar-nb {
  display: flex;
  justify-content: space-evenly;
  position: fixed;
  width: 100%;
  z-index: 5;
  top: 0;
  background-color: #fff;
}

.carousel {
  margin: 4% auto;
}

.navbar {
  background-color: rgb(82, 82, 170);
  border-top-right-radius: 100px;
  border-bottom-right-radius: 100px;
  width: 100%;  
  /* height: 110px; */
}

.nav-right {
  background-color: #fff;
  width: 40%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.navbar-image {
  width: 120px;
}

.navbar-image-logo {
  width: 100%;
}

.nav-list {
  list-style: none;
  display: flex;
  justify-content: space-around;
  margin: 0;
}

.nav-contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 2%;
}

.nav-contact a {
  text-decoration: none;
}

.navbar-collapse {
  margin-left: 25%;
}

.nav-item {
  margin-right: 7% !important;
}

.nav-link {
  color: #fff !important;
}

.nav-contact .tel {
  color: rgb(13, 199, 13);
  font-weight: 600;
}

.nav-contact .tel:nth-child(2) {
  margin-left: 10px;
}

.nav-contact .mail {
  color: blue;
  font-weight: 600;
}

.details-section {
  margin: auto 5%;
}

.topic-heading {
  text-align: center;
}

.topic-heading::after {
  content: "";
  width: 30%;
  height: 2px;
  background-color: green;
  margin: 1% 35%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.carousel-inner {
  height: 36em;
}

.why-us {
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin: 2% 0;
  flex-wrap: wrap;
}

.icon {
  height: 100%;
  border-radius: 50%;
  background-color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 8%;
  margin: 0;
}

.icon:hover {
  background-color: rgb(13, 199, 13);
}

.icon i {
  color: rgb(13, 199, 13);
  font-size: 60px;
  font-weight: 600;
}

.icon:hover i {
  color: #fff;
}

.icon-desc {
  text-align: center;
}

.u-item {
  width: 25%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.u-item-img {
  width: 30%;
  margin: 2% auto;
}

.address .list-name {
  font-size: 30px;
}

.address .list-item span {
  font-size: 20px;
}

.list-name {
  font-weight: 600;
  color: rgb(113, 23, 197);
}

.list-item {
  display: flex;
  flex-direction: column;
}

.list-item .lni-phone {
  margin-left: 3%;
}

.list-item i {
  color: rgb(13, 199, 13);
  font-weight: 700;
}

.map {
  display: flex;
  justify-content: center;
  align-items: center;
}

.map iframe {
  width: 100%;
}

.form-heading {
  color: rgb(113, 23, 197);
  font-weight: 700;
  margin-left: 10%;
  font-size: 16px;
}

.form-span {
  margin: 10%;
}

.contact-form {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 2% 0;
  flex-direction: column;
}

.form-input {
  width: 80%;
  border: 1px solid rgb(113, 23, 197);
  border-radius: 10px;
  height: 50px;
  margin-bottom: 3%;
  padding: 4%;
  outline: none;
}

.form-textarea {
  width: 80%;
  border: 1px solid rgb(113, 23, 197);
  border-radius: 10px;
  height: 80px;
  padding: 4%;
  outline: none;
}

.form-submit {
  width: 20%;
  border: 3px solid rgb(13, 199, 13);
  outline: none;
  border-radius: 20px;
  margin-top: 2%;
  background-color: rgb(13, 199, 13);
  color: #fff;
  font-weight: 700;
  font-size: 16px;
  padding: 2%;
}

.form-submit:hover {
  transform: scale(1.1);
}

.form-submit:active {
  transform: scale(0.9);
}

.footer {
  display: flex;
  justify-content: space-around;
  background-color: rgba(0, 0, 0, 0.863);
  padding: 2%;
}

.footer-item .item-heading {
  color: #fff;
  font-weight: bold;
}

.footer-list ul {
  padding: 0;
}

.footer-list a,
.footer-list li {
  text-decoration: none;
  color: rgb(163, 163, 163);
}

.social .list-name {
  margin-left: 5%;
  font-size: 30px;
}

.social-list {
  display: flex;
  justify-content: space-evenly;
}

.facebook {
  height: 100%;
  background-color: rgb(67, 67, 172);
  padding: 4%;
  border-radius: 50%;
}

.facebook i {
  font-size: 30px;
  color: #fff;
}

.twitter {
  height: 100%;
  background-color: rgb(0, 195, 255);
  padding: 4%;
  border-radius: 50%;
}

.twitter i {
  color: #fff;
  font-size: 30px;
}

.linkedin {
  height: 100%;
  background-color: rgb(0, 119, 255);
  padding: 4%;
  border-radius: 50%;
}

.linkedin i {
  color: #fff;
  font-size: 30px;
}

.pinterest {
  height: 100%;
  background-color: rgb(255, 51, 0);
  padding: 4%;
  border-radius: 50%;
}

.pinterest i {
  color: #fff;
  font-size: 30px;
}

.copyright {
  display: flex;
  justify-content: center;
  color: #fff;
  background-color: rgba(0, 0, 0, 0.938);
  padding: 1%;
}

.copyright h5 {
  font-size: 14px;
}

@media (max-width: 992px) {
  .section-padding {
    padding-top: 6%;
  }

  .details-section {
    padding-top: 4%;
  }
  
  .main {
    margin-top: 20%;
  }
  
  .carousel {
    margin: auto;
  }

  .carousel-inner {
    height: 26em;
  }

  .navbar-nb {
    flex-direction: column-reverse;
  }

  .navbar {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .navbar-image {
    width: 14%;
  }

  .nav-right {
    width: 100%;
  }

  .main {
    margin-top: 25%;
  }

  .row {
    display: flex;
    flex-direction: column-reverse;
  }

  .col-8,
  .col-4 {
    width: 100% !important;
  }

  .why-us {
    flex-direction: column;
  }

  .why-us .u-item {
    width: 100%;
  }

  .u-item-img {
    width: 100%;
  }

  .col-6 {
    width: 100% !important;
  }

  .footer {
    flex-direction: column;
  }

  .footer-item {
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    text-align: center;
  }
}

